--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,17 @@
+$font-title: 'Pacifico',
+cursive;
+$font-stack: 'Roboto',
+sans-serif;
+$morning-blue: #779C96ff;
+$primary-color: #1D4D4Fff;
+$dark-olive-green:  #6B6D3Aff;
+$light-grey: #EAEAEA;
+$med-green: rgb(66, 94, 75);
+$brown-sugar: #B36B49ff;
+$camel: #BB8949ff;
+
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #efefef;
     padding:0;
     margin:0;
 }
