--- a/src/components/navbar/Header.scss
+++ b/src/components/navbar/Header.scss
@@ -1,70 +1,98 @@
-.site-header {
+$font-title: 'Pacifico',
+cursive;
+$font-stack: 'Roboto',
+sans-serif;
+$morning-blue: #779C96ff;
+$primary-color: #1D4D4Fff;
+$dark-olive-green:  #6B6D3Aff;
+$light-grey: #EAEAEA;
+$med-green: rgb(66, 94, 75);
+$brown-sugar: #B36B49ff;
+$camel: #BB8949ff;
+
+body {
+    font-family: $font-stack;
+    background-color: $light-grey;
+    padding:0;
+    margin:0;
+}
+
+// container
+a {
+    text-decoration: none;
+  }
+  
+  // header
+  .site-header {
     display: flex;
-    justify-content: space between;
+    justify-content: space-between;
     position: fixed;
-    background-color: tomato;
     top: 0;
-    
     left: 0;
     right: 0;
     margin: auto;
     z-index: 10;
-    
-    .brand-icon a{
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 700;
-        letter-spacing: 5px;
-        text-decoration: none;
+    .brand-icon a {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      color: #212121;
     }
-    .brand-icon .icon-img {
-        display: inline-flex;
-        height: 3rem;
-        width: 3rem;
-        font-size: 2rem;
-        justify-content: center;
-        align-items: center;       
+    .brand-icon .icon {
+      display: inline-flex;
+      font-size: 2rem;
+      height: 48px;
+      width: 48px;
+      justify-content: center;
+      align-items: center;
+    }
+    .icon-img {
+      height: 48px;
+      width: 48px;
+      justify-content: center;
+      align-items: center;
     }
     .menu-trigger {
+      display: inline-flex;
+      flex-direction: column;
+      height: 48px;
+      width: 48px;
+      align-items: center;
+      justify-content: space-evenly;
+      background-color: transparent;
+      border: 0;
+      outline: 0;
+      position: relative;
+      padding: 10px;
+      cursor: pointer;
+      span {
         display: inline-flex;
-        flex-direction: column;
-        height: 3rem;
-        width: 3rem;
-        align-items: center;
-        justify-content: space-evenly;
-        background-color: transparent;
-        border: 0;
-        outline: 0;
-        position: relative;
-        padding: 10px;
-        cursor: pointer;
-        span {
-            display: inline-flex;
-            width: 30px;
-            height: 40px;
-            border-radius: 16px;
-            background-color: #efefef;
-            transition: all ease .5s;
-        }
-        .menu-close {
-            span {
-                position: absolute;
-                background-color: #efefef;
-                &:nth-child(1){
-                    transform: rotate(45deg);
-                }
-                &:nth-child(2){
-                    opacity: 0;
-                    width: 0;
-                    height: 0;
-                }
-                &:nth-child(3){
-                    transform: rotate(-45deg);
-                }
-
-            }
-
-        }
+        width: 30px;
+        height: 4px;
+        border-radius: 16px;
+        background-color: $primary-color;
+        transition: all ease 0.5s;
+      }
     }
-}
+    .menu-close {
+      span {
+        position: absolute;
+        background-color: $light-grey;
+        &:nth-child(1) {
+          transform: rotate(45deg);
+        }
+        &:nth-child(3) {
+          transform: rotate(-45deg);
+        }
+        &:nth-child(2) {
+          opacity: 0;
+          height: 0;
+          width: 0;
+        }
+      }
+    }
+  }
+  
